<resources>
    <string name="app_name">Dicogram</string>
    <string name="invalid_email">Invalid email format!</string>
    <string name="invalid_password">Invalid Password!</string>
    <string name="invalid_username">Invalid Username!</string>
    <string name="message_error">Timeout</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="change_language">Change Language</string>
    <string name="refresh">Refresh</string>
    <string name="maps">Maps</string>
    <string name="description">Description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <!--Content Description-->
    <string name="content_default_avatar">Default Avatar</string>
    <string name="content_image_story">Image Story</string>
    <string name="content_person_name">Person Name</string>
    <string name="content_detail_image">Detail Image</string>
    <string name="content_description_detail">Description Detail</string>
    <string name="content_add_story">Add story</string>
    <string name="content_image_preview">Image Preview</string>

    <!--Register-->
    <string name="register_welcome_back">Welcome Back!</string>
    <string name="register_register_to_continue">Register to Continue</string>
    <string name="register_register">Register</string>
    <string name="register_login">Login</string>
    <string name="register_prompt">Already have an account ?</string>

    <!--Login-->
    <string name="login_login">Login</string>
    <string name="login_login_to_continue">Login to Continue</string>
    <string name="login_dont_have_an_account">Don\'t have an account ?</string>
    <string name="logout">Logout</string>
    <string name="add_current_location">Add current location</string>
    <string name="upload">Upload</string>
    <string name="choose_image">Choose Image</string>
    <string name="write_caption">Write caption</string>
    <string name="content_shutter">Shutter</string>
    <string name="content_switch_camera">Switch Camera</string>
</resources>